# MLIRPlayground

./: pyproject.toml
playground/: add_sm80.cubin  cpu_kernel.py  cpu_sdpa_kernel.py  cpu_test_kernel.py  emitc_kernel.py  gpu_ext_kernel.py  gpu_kernel.py  kernel.py  sim_kernel.py  so_kernel.py
playground/prebuilt_kernels/: Makefile  linalg_add.c
playground/utils/: __init__.py
